XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ????

- Made CLI sapi print uncaught exceptions to STDERR
  (friebe)
- Made Doclet API parse XP5 syntax
  (friebe)
- Exclude replication tables from SybaseDBAdapter::getTables()
  (friebe)

Version 5.1.0, released 2006-12-28
----------------------------------
SVN version: 9007

- Implemented RFC #0103: Coding standards adjustements for XP5
  (friebe)
- Implemented RFC #0102: XP Class Runner
  (friebe)
- Implemented RFC #0088: Streams API
  (friebe)
- Updated SQLite class to use StatementFormatter
  (kiesel)
- Added webservices.soap.types.SOAPDouble class
  (strobel)
- Fixed util.Properties to return an empty array from readArray()
  for an empty string such as values=""
  (friebe)
- Fixed Java Webstart example to work with URLs containing query string
  arguments
  (friebe)

Version 5.0.0, released 2006-12-21
----------------------------------
SVN version: 8943

- fix reflection for classes from .xars
  (kiesel)
- implemented RFC #0092 (migrated to PHP5)
  (all)
  
Version 4.1.3, released 2006-12-18
----------------------------------
SVN version: 8875

- Fix (De-)Serializer bug in remote package
  (kiesel)
- Add SQLConnectionClosedException in rdbms package for mysql
  (gelli)
- Fix several bugs in DBAdapter API
  (rene)
- Add method hasProperties() to util.PropertyManager
  (friebe)
  
Version 4.1.2, released 2006-12-05
----------------------------------
SVN version: 8753

- Implemented RFC #0090 - "Refactor remote.protocol.Serializer"
  (friebe)
- Added setConnectTimeout() to peer.http.HttpConnection
  (kiesel)


Version 4.1.1, released 2006-11-28
----------------------------------
SVN version: 8688

- Fixed xp::sapi() to correctly load sapis from XARs.
  (kiesel)

- Build stacktrace elements in toString() output in a more